--- a/Final_Project_Report.html
+++ b/Final_Project_Report.html
@@ -392,9 +392,8 @@ summary {
 <li>We chose lyme disease and weather data sets because it is known that lyme disease is carried by ticks. There may be some correlation between the disease and weather patterns such as precipitation since tick are exposed to the weather given their habitat and it could have an effect on the ticks population each year.</li>
 </ul></li>
 </ul>
-</div>
-<div id="lyme-disease-background" class="section level2">
-<h2>Lyme Disease Background</h2>
+<div id="lyme-disease-background" class="section level3">
+<h3>Lyme Disease Background</h3>
 <p><strong>According to the CDC:</strong></p>
 <ul>
 <li><p>Lyme disease is a deer tick borne illness</p></li>
@@ -405,8 +404,8 @@ summary {
 <li><p>Symptoms can include flu like symptoms as well as a bulls eye like rash</p></li>
 </ul>
 </div>
-<div id="data-sets" class="section level2">
-<h2>Data Sets</h2>
+<div id="data-sets" class="section level3">
+<h3>Data Sets</h3>
 <ul>
 <li><p><strong>Lyme Disease from 1992 - 2011</strong></p>
 <ul>
@@ -428,6 +427,7 @@ summary {
 </ul>
 <p>Background description: Question list:1. Has Lyme disease increased from 1992?(Overall and states) 2. Which states have the highest rate of Lyme Disease? 3. What changes have happened to the average temperature（Overall and states)? 4. Is there any association with the rate of Lyme disease and the changes to temperature? 5. What changes have happened to the average temperature? 6. Is there any association with the rate of Lyme disease and the changes to precipitation?</p></li>
 </ul>
+</div>
 </div>
 <div id="the-pipeline-for-obtaining-and-cleaning-the-dataset" class="section level2">
 <h2>The pipeline for obtaining and cleaning the dataset</h2>
@@ -535,6 +535,7 @@ summary {
 </div>
 <div id="answers-to-the-questions-raised" class="section level2">
 <h2>Answers to the questions raised</h2>
+<p>We found that areas with lower temperatures and higher levels of precipitation were where most of the cases occurred. Around 60 degrees farenheit was the peak temperature throughout every year. States matching this description were mostly in the northeast.</p>
 </div>
 <div id="conclusion" class="section level2">
 <h2>Conclusion</h2>
